external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/index_autocomplete.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
warning[W10007]: issue with attribute value
  ┌─ tests/move_2024/ide_mode/index_autocomplete.move:9:9
  │
9 │ #[allow(ide_path_autocomplete,ide_dot_autocomplete)]
  │         ^^^^^^^^^^^^^^^^^^^^^ Unknown warning filter 'ide_path_autocomplete'

warning[W10007]: issue with attribute value
  ┌─ tests/move_2024/ide_mode/index_autocomplete.move:9:31
  │
9 │ #[allow(ide_path_autocomplete,ide_dot_autocomplete)]
  │                               ^^^^^^^^^^^^^^^^^^^^ Unknown warning filter 'ide_dot_autocomplete'

warning[W09002]: unused variable
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:16:22
   │
16 │     public fun test0(in: B<A<u64>>) {
   │                      ^^ Unused parameter 'in'. Consider removing or prefixing with an underscore: '_in'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:17:29
   │
17 │         let _ = &in.0.0[1]. ;
   │                             ^
   │                             │
   │                             Unexpected ';'
   │                             Expected an identifier or a decimal number

warning[W09002]: unused variable
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:20:22
   │
20 │     public fun test1(in: B<A<u64>>) {
   │                      ^^ Unused parameter 'in'. Consider removing or prefixing with an underscore: '_in'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:21:34
   │
21 │         let _ = &in.0.0[1].0[0]. ;
   │                                  ^
   │                                  │
   │                                  Unexpected ';'
   │                                  Expected an identifier or a decimal number

warning[W09002]: unused variable
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:24:22
   │
24 │     public fun test2(in: B<A<C>>) {
   │                      ^^ Unused parameter 'in'. Consider removing or prefixing with an underscore: '_in'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:25:34
   │
25 │         let _ = &in.0.0[1].0[0]. ;
   │                                  ^
   │                                  │
   │                                  Unexpected ';'
   │                                  Expected an identifier or a decimal number
